# WorldTimeLib

./: .gitignore  CMakeLists.txt  README.md  WebTimeApi.sln  WebTimeApi.vcxproj  WebTimeApi.vcxproj.filters  WorldTimeApi.cpp  WorldTimeApi.h  bootstrap-vcpkg.bat  bootstrap-vcpkg.sh
